[metadata]
name = robotframework-mobilelibrary
author = Subscription QA
author-email = longmazhanfeng@gmail.com
summary = app testing library for Robot Framework Extended with AppiumLibrary
license=Apache License 2.0
description-file =
    README.rst
home-page = https://github.com/Netease-AutoTest/robotframework-mobilelibrary
requires-python = >=2.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

